test: add automatic test for afterLocal flag in global user task lsiteners